minikube/1-Platform/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb-service
  name: mongodb-service
  namespace: oih-dev-ns
spec:
  ports:
    - name: '27017'
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongodb
  sessionAffinity: None
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: oih-dev-ns
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: localvolume
              mountPath: /data/db
          imagePullPolicy: Always
          securityContext:
            privileged: false
          livenessProbe:
            tcpSocket:
              port: 27017
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: localvolume
          persistentVolumeClaim:
            claimName: local-volume-claim
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
