minikube/1-Platform/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: oih-dev-ns
  labels:
    app: rabbitmq-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - name: "5672"
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: "15672"
    protocol: TCP
    port: 15672
    targetPort: 15672
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: oih-dev-ns
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        app: rabbitmq
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
      - name: rabbitmq
        image: "rabbitmq:management"
        envFrom: []
        livenessProbe:
          tcpSocket:
            port: 5672
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
        securityContext:
          privileged: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
