minikube/1-Platform/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: oih-dev-ns
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: master
        image: redis
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 0.2
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: oih-dev-ns
  labels:
    app: redis
spec:
  type: NodePort
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
